--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: blue;
+  background-color: #EAF6F6;
   font-family: 'Montserrat', sans-serif;
   margin: 0;
   text-align: center;
