--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -50,7 +50,7 @@ hr {
 }
 
 .top-profile-container {
-  background-color: #a3d2ca;
+  background-color: #d1e0e0;
   color: #30475e;
   padding: 50px 0;
 }
