--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -11,7 +11,7 @@ vertical-align: text-top;
 h1 {
   margin: 40px auto 0 auto;
   font-family: 'Caveat', cursive;
-  font-size: 400%;
+  font-size: 450%;
   font-weight: normal;
 }
 
@@ -39,7 +39,7 @@ hr {
   background-color: #EAF6F6;
   padding: 50px 30px 0;
   color: #30475e;
-}
+  }
 
 .top-profile-container {
   background-color: white;
@@ -51,7 +51,7 @@ hr {
   background-color: #30475e;
   color: #dddddd;
   padding: 50px 0;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 
 .bottom-container {
@@ -74,16 +74,18 @@ hr {
 
 .intro {
   margin: 0 auto;
+  font-size: 1.2rem;
   }
 
 .table {
   text-align: justify;
   margin: 0 auto;
   table-layout: fixed;
+  font-size: 18px;
 }
 
 .skill-row {
-  text-align: left;
+  text-align: justify;
   margin: 30px auto;
 }
 
@@ -147,6 +149,10 @@ hr {
   color: #536162;
 }
 
+.responsive {
+  padding: 0 6px;
+  width: 60%;
+}
 
 /* For desktop: */
 .col-1 {width: 8.33%;}
@@ -166,5 +172,13 @@ hr {
   /* For mobile phones: */
   [class*="col-"] {
     width: 90%;
-  }
+      }
+      .skill-row {
+        text-align: left;
+      }
+      .responsive {
+        width: 100%;
+        margin: 6px 3px;
+        text-align: left;
+      }
 }
